--- a/style.css
+++ b/style.css
@@ -1,5 +1,91 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
+
+/* General Page Styling */
 * {
     box-sizing: border-box;
     margin: 0;
+    font-family: "Poppins";
 }
 
+#center {
+    width: 70%;
+    margin: auto;
+}
+
+#title {
+    margin-top: 7.5vh;
+    font-size: 70px;
+    text-align: center;
+}
+
+
+/* Team Styling */
+#team #team-title {
+    margin-top: 5%;
+    font-size: 55px;
+    text-align: center;
+}
+
+#team #member-list {
+    display: flex;
+    flex-direction: row;
+    margin-top: 3%;
+}
+
+#team .member {
+    flex: 1;
+    width: 30%;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 5px 10px;
+    padding: 2% 0%;
+    border-radius: 10px;
+    transition: 0.25s;
+    margin: 0 2%;
+}
+
+#team .member:hover {
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.445) 0px 10px 18px;
+}
+
+#team .pfp-wrapper {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-top: 15%;
+    margin: auto;
+}
+
+#team .pfp-wrapper img {
+    display: inline;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+}
+
+#team .member-name {
+    font-size: 27.5px;
+    margin-top: 3.5%;
+}
+
+#team .member-desc {
+    font-size: 15px;
+    color: rgb(87, 87, 87);
+}
+
+
+/* Process Styling */
+#process-title {
+    margin-top: 5%;
+    font-size: 55px;
+    text-align: center;
+}
+
+.step {
+    margin-top: 3%;
+}
+
+.heading {
+    font-size: 40px;
+}
